Organize into subpackages and add config models.
Change-Id: I30d9cb2a92ec6e20f99769b792fd000055bb899b

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,18 @@ sourceSets {
     }
 }
 
+/*
+ * Configure the eclipse plugin to use the new provided configuration and download all
+ * sources and javadoc JARs.
+ */
+eclipse {
+    classpath {
+        plusConfigurations += [configurations.provided]
+        downloadSources = true
+        downloadJavadoc = true
+    }
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -84,7 +96,7 @@ dependencies {
 
 gwt {
     gwtVersion = '2.6.1'
-    modules 'com.palantir.gerrit.gerritci.settings'
+    modules 'com.palantir.gerrit.gerritci.ui.settings'
 
     compiler {
         disableClassMetadata = true
