Add job creation code and verify build config.
Change-Id: Ia4099ab452adccbc48308054eb251ecb350bae65

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ jar {
             'Gerrit-ApiVersion': apiVersion,
             'Gerrit-Module': 'com.palantir.gerrit.gerritci.Module',
             'Gerrit-HttpModule': 'com.palantir.gerrit.gerritci.HttpModule',
+            'Gerrit-ReloadMode': 'restart',
             'Implementation-Vendor': 'Palantir',
             'Implementation-URL': 'https://github.com/palantir/gerrit-ci',
             'Implementation-Title': "${apiType} ${project.name}",
