Add test framework and tests for existing classes.
Change-Id: I8703feb7a9c884d5ed262b06e81db8fb4233cd62

--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,10 @@ dependencies {
         [group: 'log4j', name: 'log4j', version: '1.2.17'],
         [group: 'org.apache.velocity', name:'velocity', version: '1.7']
     )
+
+    testCompile(
+        [group: 'junit', name: 'junit', version: '4.12']
+    )
 }
 
 gwt {
