--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ dependencies {
 
 gwt {
     gwtVersion = '2.6.1'
-    modules 'com.palantir.gerrit.gerritci.ui.settings'
+    modules 'com.palantir.gerrit.gerritci.ui.settings', 'com.palantir.gerrit.gerritci.ui.projects'
 
     compiler {
         disableClassMetadata = true
