--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,8 @@ dependencies {
         [group: 'org.slf4j', name: 'slf4j-api', version: '1.7.12'],
         [group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.12'],
         [group: 'log4j', name: 'log4j', version: '1.2.17'],
-        [group: 'org.apache.velocity', name:'velocity', version: '1.7']
+        [group: 'org.apache.velocity', name:'velocity', version: '1.7'],
+        [group: 'org.jsoup', name: 'jsoup', version: '1.8.2']
     )
 
     testCompile(
