Remove unused plugin settings screen and unused classes.
Change-Id: I266fd88b8b7629d7f70f719e6ad857d177ea9dd9

--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,7 @@ dependencies {
 
 gwt {
     gwtVersion = '2.6.1'
-    modules 'com.palantir.gerrit.gerritci.ui.settings', 'com.palantir.gerrit.gerritci.ui.projects'
+    modules 'com.palantir.gerrit.gerritci.ui.projects'
 
     compiler {
         disableClassMetadata = true
