Fix stupid keyboard shortcut bug.
Change-Id: I5c93b5b4ecc25599b29f063fb8c67362f50e82ad

--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,8 @@ jar {
 dependencies {
     provided(
         [group: 'com.google.gerrit', name: "gerrit-${apiType}-api", version: apiVersion],
-        [group: 'com.google.gerrit', name: 'gerrit-plugin-gwtui', version: apiVersion]
+        [group: 'com.google.gerrit', name: 'gerrit-plugin-gwtui', version: apiVersion],
+        [group: 'com.google.gwt', name:'gwt-servlet', version: '2.6.1']
     )
 
     compile(
