build.gradle: Remove special one-off version of jenkins-client
jenkins-client-0.3.1 was released at the end of August, which included the
necessary change.  There have also been 0.3.2 and 0.3.3 releases since
then.

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,6 @@ idea {
 
 repositories {
     mavenLocal()
-    maven { url "https://dl.bintray.com/mass/maven/" }
     mavenCentral()
     maven { url "https://repo.jenkins-ci.org/public/" }
 }
@@ -101,8 +100,7 @@ dependencies {
     )
 
     compile(
-        // We are stuck using the custom alpha version of jenkins-client until changes are merged upstream
-        [group: 'com.offbytwo.jenkins', name: 'jenkins-client', version: '0.3.1-alpha'],
+        [group: 'com.offbytwo.jenkins', name: 'jenkins-client', version: '0.3.3'],
         [group: 'org.slf4j', name: 'slf4j-api', version: '1.7.12'],
         [group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.12'],
         [group: 'log4j', name: 'log4j', version: '1.2.17'],
